fix overflow on mobile

--- a/styles.css
+++ b/styles.css
@@ -182,11 +182,11 @@ main {
     max-width: 800px;
     margin: 0 auto 60px auto;
     padding: 0 20px;
+    flex-direction: column;
 }
 
 #about-fear-knot {
     display: flex;
-    flex-direction: row;
     align-items: center;
     gap: 20px;
 }
@@ -222,6 +222,11 @@ main {
 }
 
 @media (max-width: 964px) {
+    html {
+      max-width: 100%;
+      overflow-x: hidden;
+    }
+
     .header-container {
         position: static;
     }
@@ -259,5 +264,24 @@ main {
 
   .product-window {
     margin: 10px auto;
+  }
+
+  #about-fear-knot {
+      flex-direction: column;
+      text-align: center;
+  }
+
+  #creator {
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+      border-radius: 10%;
+      border: 4px solid var(--main-color);
+      display: block;
+      margin: 0 auto;
+  }
+
+  #about-fear-knot p {
+      margin-top: 20px;
   }
 }
